# StockSensepro

./: .gitignore  CATEGORY_RELATIONSHIPS.md  GNN_FIX_VISUAL.txt  GNN_PROPAGATION_FIX.md  README.md  SETUP.md
backend/: .env.example  docker-compose.yml  pyproject.toml  seed_user.py
backend/alembic/: env.py
backend/alembic/versions/: 0a3a3107bb5e_add_inventory_table.py  47430731dfc2_add_users_table.py  4a524332f044_add_forecasts_table_fixed.py  541389f5a217_add_forecasts_table.py  7875da9ba487_add_rebalancing_plan_table.py  9afba5c57f40_add_adversarial_risk_table.py  ac419566eb30_add_staging_tables_for_csv_uploads.py  d6c0cb09f657_add_store_id_to_users.py  e195bc4fa89a_create_purchase_orders_tables.py  eb5f74d54acb_add_forecasts_table.py  f1ccf32abd39_add_ai_scenario_fields_to_adversarial_.py
backend/analysis_tools/: analyze_1000_transactions.py  analyze_restock_flow.py  check_daily_transactions.py  check_inventory.py  check_inventory_updates.py  verify_po_data.py
backend/app/: config.py  database.py  main.py
backend/app/api/: adversarial.py  analytics.py  auth.py  csv_upload.py  forecast.py  gnn.py  gnn_graph.py  graph_propagation.py  inventory.py  llm_chat.py  products.py  purchase_orders.py  rebalancing.py  simulations.py  users.py
backend/app/ml_writers/: adversarial_writer.py  forecast_writer.py
backend/app/models/: __init__.py  forecast.py  (+7 more)
backend/db_tools/: assign_manager_stores.py  fix_db.py  inspect_db.py  inspect_tables.py
backend/scripts/: daily_simulator.py  import_transactions.py  populate_inventory.py
backend/testing_tools/: test_po_api.py
(+102 files in other folders)
