[project]
name = "backend"
version = "0.1.0"
description = "StockSense Backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "bcrypt>=4.0.0",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "scripts*"]

